# DTCPW

./: .gitignore  LICENSE  README.md  build.bat  pyproject.toml
pydumb/: __init__.py  __main__.py  builder.py  newconfig.py  util.py
test/: demo.py  pyproject.toml
test/demo/: __init__.py  data.txt
winbundle/: __init__.py  __main__.py  builder.py  icon.py  newconfig.py
