[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "winbundle"
version = "0.1.1"
authors = [
    {name = "Alex Walters", email = "alex.walters@gmail.com"},
]
description = "A simple freezer for windows"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "distlib",
    "questionary",
    "toml",
    "pywin32-ctypes",
    "construct",
]

[project.urls]
# Documentation = "https://flit.pypa.io"
Source = "https://github.com/tritium21/winbundle"