[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "winbundle"
dynamic = ["version"]
authors = [
    {name = "Alex Walters", email = "alex.walters@gmail.com"},
]
description = "A simple freezer for windows"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "distlib",
    "questionary",
    "toml",
    "pywin32-ctypes",
    "construct",
]

[tool.setuptools.dynamic]
version = {attr = "winbundle.__version__"}

[project.urls]
Source = "https://github.com/tritium21/winbundle"