[project]
name = "demo"
version = "1.0.0"
dependencies = [
    'requests',
]

[project.scripts]
demo = "demo:main [icon=python.ico]"

[project.gui-scripts]
demog = "demo:gui [icon=python.ico]"

[tool.pydumb]
src = [
    'demo',
    'notdemo',
]
need_tkinter = true
py_version = '3.10.6'
machine = 'win32'